// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<Header
  activeTrigger={null}
  additionalLogos={Array []}
  baseUrl=""
  chevronOverAvatar={false}
  closeMenu={[Function]}
  communityId="someId"
  communitySelector={
    Array [
      Object {
        "label": "Community Name",
        "value": "1",
      },
    ]
  }
  groupIds={
    Array [
      "",
    ]
  }
  hideJoinNow={false}
  hideSearch={false}
  loginUrl="/some/login/url"
  logos={Array []}
  menuItems={Array []}
  onMobileToggleClick={[Function]}
  openMenu={[Function]}
  openedMenu={null}
  pageId="home"
  profile={null}
  registerUrl="/some/register/url"
  theme={
    Object {
      "additionalLogos": "src-shared-components-tc-communities-Header-style___additionalLogos",
      "authorize": "src-shared-components-tc-communities-Header-style___authorize",
      "avatar": "src-shared-components-tc-communities-Header-style___avatar",
      "avatarMobile": "src-shared-components-tc-communities-Header-style___avatarMobile",
      "btnLogin": "src-shared-components-tc-communities-Header-style___btnLogin",
      "btnRegister": "src-shared-components-tc-communities-Header-style___btnRegister",
      "challengeDropdown": "src-shared-components-tc-communities-Header-style___challengeDropdown",
      "chevronDown": "src-shared-components-tc-communities-Header-style___chevronDown",
      "container": "src-shared-components-tc-communities-Header-style___container",
      "header": "src-shared-components-tc-communities-Header-style___header",
      "logo": "src-shared-components-tc-communities-Header-style___logo",
      "logos": "src-shared-components-tc-communities-Header-style___logos",
      "logosWrap": "src-shared-components-tc-communities-Header-style___logosWrap",
      "menu": "src-shared-components-tc-communities-Header-style___menu",
      "menuItem": "src-shared-components-tc-communities-Header-style___menuItem",
      "menuLink": "src-shared-components-tc-communities-Header-style___menuLink",
      "menuLinkActive": "src-shared-components-tc-communities-Header-style___menuLinkActive",
      "menuWrap": "src-shared-components-tc-communities-Header-style___menuWrap",
      "menuWrapOpen": "src-shared-components-tc-communities-Header-style___menuWrapOpen",
      "mobileToggle": "src-shared-components-tc-communities-Header-style___mobileToggle",
      "search": "src-shared-components-tc-communities-Header-style___search",
      "userMenu": "src-shared-components-tc-communities-Header-style___userMenu",
      "userMenuHandle": "src-shared-components-tc-communities-Header-style___userMenuHandle",
      "userWrap": "src-shared-components-tc-communities-Header-style___userWrap",
      "userWrapMobile": "src-shared-components-tc-communities-Header-style___userWrapMobile",
    }
  }
/>
`;

exports[`Snapshot match 2`] = `
<Header
  activeTrigger={null}
  additionalLogos={Array []}
  baseUrl=""
  chevronOverAvatar={false}
  closeMenu={[Function]}
  communityId="someId"
  communitySelector={
    Array [
      Object {
        "label": "Community Name",
        "value": "1",
      },
    ]
  }
  cssUrl="some/css/url"
  groupIds={
    Array [
      "",
    ]
  }
  hideJoinNow={false}
  hideSearch={false}
  isMobileOpen={true}
  loginUrl="/some/login/url"
  logos={
    Array [
      "some/logo/url",
    ]
  }
  menuItems={
    Array [
      Object {
        "title": "Menu Item 1",
        "url": "pageId1",
      },
      Object {
        "title": "Menu Item 2",
        "url": "pageId2",
      },
      Object {
        "title": "Menu Item 3",
        "url": "pageId3",
      },
    ]
  }
  onMobileToggleClick={[Function]}
  openMenu={[Function]}
  openedMenu={null}
  pageId="other"
  profile={null}
  registerUrl="/some/register/url"
  theme={
    Object {
      "additionalLogos": "src-shared-components-tc-communities-Header-style___additionalLogos",
      "authorize": "src-shared-components-tc-communities-Header-style___authorize",
      "avatar": "src-shared-components-tc-communities-Header-style___avatar",
      "avatarMobile": "src-shared-components-tc-communities-Header-style___avatarMobile",
      "btnLogin": "src-shared-components-tc-communities-Header-style___btnLogin",
      "btnRegister": "src-shared-components-tc-communities-Header-style___btnRegister",
      "challengeDropdown": "src-shared-components-tc-communities-Header-style___challengeDropdown",
      "chevronDown": "src-shared-components-tc-communities-Header-style___chevronDown",
      "container": "src-shared-components-tc-communities-Header-style___container",
      "header": "src-shared-components-tc-communities-Header-style___header",
      "logo": "src-shared-components-tc-communities-Header-style___logo",
      "logos": "src-shared-components-tc-communities-Header-style___logos",
      "logosWrap": "src-shared-components-tc-communities-Header-style___logosWrap",
      "menu": "src-shared-components-tc-communities-Header-style___menu",
      "menuItem": "src-shared-components-tc-communities-Header-style___menuItem",
      "menuLink": "src-shared-components-tc-communities-Header-style___menuLink",
      "menuLinkActive": "src-shared-components-tc-communities-Header-style___menuLinkActive",
      "menuWrap": "src-shared-components-tc-communities-Header-style___menuWrap",
      "menuWrapOpen": "src-shared-components-tc-communities-Header-style___menuWrapOpen",
      "mobileToggle": "src-shared-components-tc-communities-Header-style___mobileToggle",
      "search": "src-shared-components-tc-communities-Header-style___search",
      "userMenu": "src-shared-components-tc-communities-Header-style___userMenu",
      "userMenuHandle": "src-shared-components-tc-communities-Header-style___userMenuHandle",
      "userWrap": "src-shared-components-tc-communities-Header-style___userWrap",
      "userWrapMobile": "src-shared-components-tc-communities-Header-style___userWrapMobile",
    }
  }
/>
`;
